feat: print android and ios

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ml-solutions-ltda/capacitor-bluetooth-thermal-printer.git.git"
+    "url": "git+https://github.com/ml-solutions-ltda/capacitor-bluetooth-thermal-printer.git"
   },
   "bugs": {
-    "url": "https://github.com/ml-solutions-ltda/capacitor-bluetooth-thermal-printer.git/issues"
+    "url": "https://github.com/ml-solutions-ltda/capacitor-bluetooth-thermal-printer/issues"
   },
   "keywords": [
     "capacitor",
@@ -39,7 +39,7 @@
     "eslint": "eslint . --ext ts",
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\" --plugin=prettier-plugin-java",
     "swiftlint": "node-swiftlint",
-    "docgen": "docgen --api PrintThermalPluginPlugin --output-readme README.md --output-json dist/docs.json",
+    "docgen": "docgen --api PrintThermalPlugin --output-readme README.md --output-json dist/docs.json",
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.mjs",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
