--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ios/Sources",
     "ios/Tests",
     "Package.swift",
-    "CapacitorCommunityPrintThermal.podspec"
+    "PrintThermal.podspec"
   ],
   "author": "ML Solutions",
   "license": "MIT",
@@ -31,7 +31,7 @@
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
-    "verify:ios": "xcodebuild -scheme CapacitorCommunityPrintThermal -destination generic/platform=iOS",
+    "verify:ios": "xcodebuild -scheme PrintThermal -destination generic/platform=iOS",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
