feat: publish package

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "unpkg": "dist/plugin.js",
+  "private": false,
   "files": [
     "android/src/main/",
     "android/build.gradle",
@@ -76,5 +77,8 @@
     "android": {
       "src": "android"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
