--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,5 @@
 include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
+repositories {
+    maven { url 'https://jitpack.io' }
+}
