--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,14 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
 apply plugin: 'com.android.library'
 
 android {
